Document scenario tag deprecations and limit increases

--- a/src/data/structs/h1/tags/common.yml
+++ b/src/data/structs/h1/tags/common.yml
@@ -388,6 +388,8 @@ type_defs:
       - name: buffer
         type: char
         count: 32
+        comments:
+          en: Null-terminated string in 32-char buffer.
   TagDependency:
     class: struct
     fields:
