Add scenery flags field to tag structure

--- a/src/data/structs/h1/tags/scenery.yml
+++ b/src/data/structs/h1/tags/scenery.yml
@@ -3,10 +3,21 @@ imports:
   h1/tags/object:
     - BasicObject
 type_defs:
+  H1ASceneryFlags:
+    class: bitfield
+    size: 4
+    bits:
+      - name: off_in_pegasus
+        meta:
+          pegasus_only: true
+        comments:
+          en: >-
+            Presumably hides the scenery in MCC "Pegasus", the censored Chinese
+            release of the game. This flag is now unused in modern versions.
   Scenery:
     class: struct
     extends:
-      type: BasicObject
+      type: Object
     meta:
       tag_id: scen
       postprocess_hek_data: true
@@ -17,4 +28,12 @@ type_defs:
         Fixed decoration objects like boulders, plants, and crates. Placed in
         the level using [Sapien][].
     assert_size: 508
-    fields: []
+    fields:
+      - name: flags
+        type: H1ASceneryFlags
+        meta:
+          h1a_only: true
+        comments:
+          en: This field is padding in legacy Halo. It is visible in [H1A Guerilla][h1a-guerilla].
+      - type: pad
+        size: 124
