Clean up phantom BSP documentation taking h1a tool into account

--- a/src/content/h1/tools/h1a-ek/h1a-standalone-build/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-standalone-build/page.yml
@@ -12,4 +12,4 @@ imgCaption:
   en: Using some `ai_render_*` and `ai_debug_*` globals
 thanks:
   num0005:
-    en: Documenting H1A standlone build.
+    en: Documenting H1A standlone build
