Revert aether image to PNG for transparency

--- a/src/content/h1/tools/aether/page.yml
+++ b/src/content/h1/tools/aether/page.yml
@@ -1,6 +1,6 @@
 title:
   en: Aether
-img: aether.jpg
+img: aether.png
 imgCaption:
   en: |
     Timberland's [BSP][scenario_structure_bsp] and [scenery][] extracted
